<resources>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="app_name">Android Labs</string>
    <string name="title_text_L01">Hello World!</string>
    <string name="button_text_L01">I\’m a button</string>
    <string name="title_text_L02">Look at my GUI</string>
    <string name="button_text_L02">Click here</string>
    <string name="checkBox_text_L02">Check this out!</string>
    <string name="switch_text_L02">Switch on/off</string>
    <string name="editText_text_L02">Type here</string>
    <string name="toast_text_L02">Here is more information</string>
    <string name="snackbar_checkbox_L02">The checkbox is now</string>
    <string name="snackbar_switch_L02">The switch is now</string>
    <string name="undo_button_L02">Undo</string>
    <string name="textView_text1_L03">Enter your email address:</string>
    <string name="editText_text1_L03">Type email here</string>
    <string name="textView_text2_L03">Type your password:</string>
    <string name="button_text_L03">LOGIN</string>
    <string name="textView_text3_L03">Your profile</string>
    <string name="textView_text4_L03">Your name:</string>
    <string name="editText_text2_L03">Enter your name</string>
    <string name="textView_text5_L03">Your email:</string>
    <string name="editText_text3_L03">Enter your email</string>
    <string name="textView_text6_L03">Your picture:</string>
    <string name="textView_text7_L03">Click the button above to take a picture</string>
    <string name="button_text1_L04">Go to chat</string>
    <string name="button_text2_L04">Send</string>
    <string name="editText_text_L04">Type here</string>
    <string name="button_text3_L04">Receive</string>
    <string name="dialogTitle_text_L04">Do you want to delete this?</string>
    <string name="setMessage_text1_L04">The selected row is:  </string>
    <string name="setMessage_text2_L04">The database ID is:  </string>
    <string name="posButton_text_L04">Yes</string>
    <string name="negButton_text_L04">No</string>
    <string name="button_text_L06">Weather Forecast</string>
    <string name="textView_text1_L06">Current: %1$s°C</string>
    <string name="textView_text2_L06">Min: %1$s°C</string>
    <string name="textView_text3_L06">Max: %1$s°C</string>
    <string name="textView_text4_L06">UV Rating: %1$s</string>
    <string name="textView_text1_L07">Message Here</string>
    <string name="textView_text2_L07">ID=%1$s </string>
    <string name="checkBox_text_L07">Is a Send Message</string>
    <string name="button_text_L07">HIDE</string>
    <string name="button_text_L08">Go to Toolbar Page</string>
    <string name="menu_text1_L08">You clicked on item 1</string>
    <string name="menu_text2_L08">You clicked on item 2</string>
    <string name="menu_text3_L08">You clicked on item 3</string>
    <string name="menu_text4_L08">You clicked the overflow item</string>
    <string name="nav_text1_L08">Chat</string>
    <string name="nav_text2_L08">Weather</string>
    <string name="nav_text3_L08">Login</string>
    <string name="nav_text4_L08">Overflow</string>
    <string name="open_L08">Open</string>
    <string name="close_L08">Close</string>
</resources>