<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/textView1_L07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_text1_L07"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/textView2_L07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_text2_L07"
        android:textSize="30sp"
        android:layout_below="@id/textView1_L07" />
        <CheckBox
            android:id="@+id/checkbox_L07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBox_text_L07"
            android:layout_below="@id/textView2_L07" />
    <Button
        android:id="@+id/button_L07"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_text_L07"
        android:layout_margin="10dp"/>

</RelativeLayout>


</FrameLayout>