<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <!-- Row 1 -->
    <TextView
        android:id="@+id/textView_L02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/title_text_L02"
        />
    <!-- Row 2 -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/button_L02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_text_L02"
            android:layout_weight="1"
            android:layout_gravity="fill"
            />
        <CheckBox
            android:id="@+id/checkbox_L02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBox_text_L02"
            android:layout_weight="1"
            android:layout_gravity="fill"
            />
        />
    </LinearLayout>
    <!-- Row 3 -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <ImageButton
            android:id="@+id/flag_L02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/flag"
            android:layout_weight="1"
            android:layout_gravity="fill"
            />
        <Switch
            android:id="@+id/switch_L02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_text_L02"
            android:layout_weight="1"
            android:layout_gravity="fill"
            />
    </LinearLayout>
    <!-- Row 4 -->
    <EditText
        android:id="@+id/editText_L02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_text_L02"
        android:inputType="textPersonName|textCapWords"
        />
</LinearLayout>