<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView_L06"
        android:layout_width="200dp"
        android:layout_height="200dp"/>
        <TextView
            android:id="@+id/textView1_L06"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_text1_L06"
            android:layout_toEndOf="@id/imageView_L06"
            />

    <TextView
        android:id="@+id/textView2_L06"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1_L06"
        android:layout_toEndOf="@id/imageView_L06"
        android:text="@string/textView_text2_L06" />
        <TextView
            android:id="@+id/textView3_L06"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_text3_L06"
            android:layout_toEndOf="@id/imageView_L06"
            android:layout_below="@id/textView2_L06" />

    <TextView
        android:id="@+id/textView4_L06"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3_L06"
        android:layout_toEndOf="@id/imageView_L06"
        android:text="@string/textView_text4_L06" />

    <ProgressBar
        android:id="@+id/progressBar_L06"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4_L06"
        android:layout_toEndOf="@id/imageView_L06"
        android:visibility="invisible" />
</RelativeLayout>