<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp"

    >

<ListView
        android:id="@+id/listViewL04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
</ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >
    <Button
        android:id="@+id/button2_L04"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/button_text2_L04"
        android:textSize="10sp"
        android:layout_gravity="bottom"
        android:layout_weight="5"

        />
        <EditText
            android:id="@+id/editText_L04"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/editText_text_L04"
            android:layout_weight="12"/>
        <Button
            android:id="@+id/button3_L04"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_text3_L04"
            android:textSize="10sp"
            android:layout_weight="5"
            />
    </LinearLayout>



</LinearLayout>